# scheems

./: .pre-commit-config.yaml  404.html  api_reference.html  bulk_endpoints.html  getting_started.html  http_methods.html  index.html  mkdocs.yml  pyproject.toml  tox.ini
.github/workflows/: deploy_docs.yml
docs/: CNAME  api_reference.md  getting_started.md  http_methods.md  index.md
scheems/: __init__.py  application.py  exceptions.py  routes.py  validations.py
search/: search_index.json
